# val

./: PRODUCT.md  bun.lockb  eslint.config.mjs  hello.py  next.config.js  package.json  plan.md  pyproject.toml  requirements.txt  tailwind.config.ts  vercel.json
.github/workflows/: scrape.yaml
api/: index.py
scraper/: main.py  marketscreener_links.json  pyproject.toml
scraper/scrape/core/: cancellation.py  config.py  http_utils.py  json_util.py  mongo.py  policies.py  rate_limit.py  tickers.py  yahoo_client.py
scraper/scrape/sources/: finviz.py  marketscreener.py  sec_companyfacts.py  yahoo_market_discovery.py  yahoo_overview.py  yahoo_profiles.py  yahoo_snapshot.py  yahooquery_adapter.py
scraper/scrape/valuation/: dcf_inputs.py  market_metrics.py  statements.py  string_mapper.py
scraper/tests/: test_performance_optimizations.py
src/app/: globals.css  layout.tsx
src/app/(landing)/: layout.tsx  page.tsx
src/app/(models)/: DcfInputs.ts  Financials.ts  Industry.ts  SimilarCompanies.ts  TickerOverview.ts
src/app/about/: layout.tsx  page.tsx
src/app/api/dcf/: route.ts
src/app/disclaimer/: page.tsx
src/app/macro/: page.tsx
src/components/: footer.tsx  info-hover.tsx  line-area-chart.tsx  main-header.tsx  mode-toggle.tsx  stacked-bar-chart.tsx
src/components/searchbar/: header-search-bar.tsx  search-bar.tsx
src/lib/: apiHelpers.ts  dcf.ts  financialComparison.ts
tests/: README.md  bun-test.d.ts  dcf.test.ts
tests/_python/: generate_fixtures.py  modelling.py
tests/fixtures/: calc_cost_of_capital.json  dcf.json  r_and_d_adjustment.json
(+18 files in other folders)
