[project]
name = "scraper-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "lxml>=6.0.2",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pymongo>=4.16.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "transformers==4.57.6",
    "yfinance>=1.1.0",
]
